# deepsort-1

./: CMakeLists_jetson.txt  CMakeLists_ordinary.txt  README.md  clean  clean.sh  make.sh  make_jetson.sh
code/: Makefile  yolo_console_dll  yolo_console_dll.cpp
darknet-master/: readme.md
tracker/: Makefile
tracker/src/: CMakeLists.txt
tracker/src/api/: deepsort.cpp
